public class Period
{
 public Guid PeriodId { get; set; }
 public required string PeriodName { get; set; }    
}